start to look at link between Bkl1 Bkl2 and climate

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -373,6 +373,17 @@
   pages = {137--149},
 }
 
+@article{Pfautsch-2016,
+	title = {Climate determines vascular traits in the ecologically diverse genus \textit{{Eucalyptus}}},
+	volume = {19},
+	issn = {1461023X},
+	doi = {10.1111/ele.12559},
+	journal = {Ecology Letters},
+	author = {Pfautsch, Sebastian and Harbusch, Marco and Wesolowski, Anita and Smith, Renee and Macfarlane, Craig and Tjoelker, Mark G. and Reich, Peter B. and Adams, Mark A.},
+	year = {2016},
+	pages = {240--248},
+}
+
 @Article{Polechova-2005,
   title = {Speciation through competition: a critical review},
   volume = {59},
