minor edits ideas

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -476,16 +476,19 @@
   pages = {13703--13708},
 }
 
-@Article{Sakschewski-2015,
+
+@article{Sakschewski-2015,
   title = {Leaf and stem economics spectra drive diversity of functional plant traits in a dynamic global vegetation model},
   volume = {21},
   doi = {10.1111/gcb.12870},
   number = {7},
   journal = {Global Change Biology},
-  author = {Boris Sakschewski and Werner von Bloh and Alice Boit and Anja Rammig and Jens Kattge and Lourens Poorter and Josep Pe{\~n}uelas and Kirsten Thonicke},
+  author = {Sakschewski, Boris and {von Bloh}, Werner and Boit, Alice and Rammig, Anja and Kattge, Jens and Poorter, Lourens and Pe{\~n}uelas, Josep and Thonicke, Kirsten},
+  month = jul,
   year = {2015},
-  pages = {2711--2725},
+  pages = {2711--2725}
 }
+
 
 @Article{Scheiter-2009,
   title = {Impacts of climate change on the vegetation of Africa: an adaptive dynamic vegetation modelling approach},
