start second model and progress on vessel size analysis

--- a/ms/literature.tex
+++ b/ms/literature.tex
@@ -125,7 +125,45 @@ gradients}
 
 \subsection{Vessel size}
 
+Central for this traits is the idea of a trade-off between safety
+\textit{vs.} efficiency of the xylem vessel
+networks. \citet{Gleason-2016} however shows the existence of numerous
+species with low safety and efficiency. Vessel diamter
+is related to the conductivity through. The link between vessel size
+and drought caviation risk is less clear, probably because of the
+importance of intervessel pits in controlling caviation in some
+species (in contrast with freeze–thaw embolism which is more directly
+related to vessel).  
+\citet{Pfautsch-2016} pattern of decrease of mean hydraulically
+weighted vessel diameter with increasing
+aridity in Australia independent of tree height, in contrast with
+\citet{Olson-2013,Olson-2014} which found little effect of climate after
+controlling for tree height ($R^2 = 0.06$).
+
+\citet{Markesteijn-2011} No direct measure of vessel size but report a
+a trade-off between hydraulic conductivity and both shade tolerance
+and drought tolerance (in oposition to what is generally expected).
+
+Other caracteristic of the vascular system are also crucial, pit
+membrane anatomy (such as Intervessel pit membrane thickness), Hydraulic integration, vessel agregation, ...
+
+\subsection{Leaf and wood tolerance to water stress P50}
+
+P50 of wood (12 or 88 as well)
+
+P50leaf \citet{Blackman-2012,Blackman-2014}  and leaf water potential at turgor loss point $\pi_{tlp}$.
 TODO
+
+\subsection{Leaf Photosynthesis response to water or to temperature}
+
+TODO
+
+\subsection{LT50 Frost tolerance of leaf or wood}
+
+TODO
+
+\subsection{Leaf area to sapwood ratio}
+
 
 \subsection{Summary}
 
