--- a/ms/references.bib
+++ b/ms/references.bib
@@ -8,6 +8,29 @@
   pages = {545--562},
 }
 
+
+@article{Blackman-2012,
+	title = {Leaf hydraulic vulnerability influences species’ bioclimatic limits in a diverse group of woody angiosperms},
+	volume = {168},
+	number = {1},
+	journal = {Oecologia},
+	author = {Blackman, C. J. and Brodribb, T. J. and Jordan, G. J.},
+	year = {2012},
+	pages = {1--10},
+}
+
+
+@article{Blackman-2014,
+	title = {Leaf hydraulic vulnerability to drought is linked to site water availability across a broad range of species and climates},
+	volume = {114},
+	doi = {10.1093/aob/mcu131},
+	number = {3},
+	journal = {Annals of Botany},
+	author = {Blackman, C. J. and Gleason, S. M. and Chang, Y. and Cook, A. M. and Laws, C. and Westoby, M.},
+	year = {2014},
+	pages = {435--440},
+}
+
 @Article{Bridle-2007,
   title = {Limits to evolution at range margins: when and why does adaptation fail?},
   volume = {22},
@@ -202,6 +225,19 @@
   author = {Sean M. Gleason and Don W. Butler and Kasia Ziemi{\'n}ska and Pawe{\l} Waryszak and Mark Westoby},
   year = {2012},
   pages = {343--352},
+}
+
+
+@article{Gleason-2016,
+	title = {Weak tradeoff between xylem safety and xylem-specific hydraulic efficiency across the world's woody plant species},
+	volume = {209},
+	doi = {10.1111/nph.13646},
+	number = {1},
+	journal = {New Phytologist},
+	author = {Gleason, Sean M. and Westoby, Mark and Jansen, Steven and Choat, Brendan and Hacke, Uwe G. and Pratt, Robert B. and Bhaskar, Radika and Brodribb, Tim J. and Bucci, Sandra J. and Cao, Kun-Fang and Cochard, Hervé and Delzon, Sylvain and Domec, Jean-Christophe and Fan, Ze-Xin and Feild, Taylor S. and Jacobsen, Anna L. and Johnson, Daniel M. and Lens, Frederic and Maherali, Hafiz and Martínez-Vilalta, Jordi and Mayr, Stefan and McCulloh, Katherine A. and Mencuccini, Maurizio and Mitchell, Patrick J. and Morris, Hugh and Nardini, Andrea and Pittermann, Jarmila and Plavcová, Lenka and Schreiber, Stefan G. and Sperry, John S. and Wright, Ian J. and Zanne, Amy E.},
+	month = jan,
+	year = {2016},
+	pages = {123--136},
 }
 
 @Article{Goldberg-2006,
