--- a/ms/references.bib
+++ b/ms/references.bib
@@ -262,6 +262,15 @@
   pages = {168--198},
 }
 
+
+@book{Keddy-1989,
+  title = {Competition},
+  publisher = {{Springer Netherlands}},
+  author = {Keddy, P. A.},
+  year = {1989}
+}
+
+
 @Article{Kirkpatrick-1997,
   title = {Evolution of a species' range},
   volume = {150},
@@ -313,6 +322,19 @@
   author = {Leimar, O. and Sasaki, A. and Doebeli, M. and Dieckmann, U.},
   year = {2013},
   pages = {3 -- 13}
+}
+
+
+@article{Lienard-2016,
+  title = {An Individual-Based Forest Model Links Canopy Dynamics and Shade Tolerances along a Soil Moisture Gradient},
+  volume = {3},
+  doi = {10.1098/rsos.150589},
+  number = {2},
+  journal = {Royal Society Open Science},
+  author = {Li{\'e}nard, Jean and Strigul, Nikolay},
+  month = feb,
+  year = {2016},
+  pages = {150589}
 }
 
 @Article{Maherali-2004,
@@ -600,6 +622,17 @@
   author = {Ulrike Stahl and Bj{\"o}rn Reu and Christian Wirth},
   year = {2014},
   pages = {13739--13744},
+}
+
+@article{Sterck-2011,
+  title = {Functional Traits Determine Trade-Offs and Niches in a Tropical Forest Community},
+  volume = {108},
+  doi = {10.1073/pnas.1106950108},
+  number = {51},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Sterck, F. and Markesteijn, L. and Schieving, F. and Poorter, L.},
+  year = {2011},
+  pages = {20627--20632}
 }
 
 @Article{Swenson-2010,
